better error testing - also support for i=